--- a/scenario.toml
+++ b/scenario.toml
@@ -1,5 +1,6 @@
 # Text-2-SQL Agent Benchmark Scenario
 # Green Agent: AgentX SQL Benchmark Evaluator
+# Triggered: 2026-01-15
 
 [green_agent]
 # Registered Green Agent on AgentBeats
