--- a/scenario.toml
+++ b/scenario.toml
@@ -3,13 +3,14 @@
 # Triggered: 2026-01-15
 
 [green_agent]
-# Registered Green Agent on AgentBeats
-agentbeats_id = "019bc3ec-653b-7d90-aa8c-8d27d9d48ede"
+# Use your GHCR AgentX green agent image
+image = "ghcr.io/ashcastelinocs124/agentx-green:latest"
 env = {}
 
 # Participant - SQL generating agent
 [[participants]]
-agentbeats_id = "019bc3fe-9310-7251-9929-e2568f2145db"
+# Use your GHCR AgentX purple agent image
+image = "ghcr.io/ashcastelinocs124/agentx-purple:latest"
 name = "sql_agent"
 env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}" }
 
@@ -20,10 +21,5 @@ task_count = 5
 scorer_preset = "default"
 dialect = "sqlite"
 same_tasks = true
-<<<<<<< HEAD
-# Retry: 195456
-=======
-# Re-trigger: Thu Jan 15 17:44:06 CST 2026
-# Retry: 195050
->>>>>>> origin/run-assessment
+# Retry: 200845
 # Retry: 200802
