--- a/scenario.toml
+++ b/scenario.toml
@@ -3,14 +3,13 @@
 # Triggered: 2026-01-15
 
 [green_agent]
-# Use your GHCR AgentX green agent image
-image = "ghcr.io/ashcastelinocs124/agentx-green:latest"
+# Registered Green Agent on AgentBeats
+agentbeats_id = "019bc3ec-653b-7d90-aa8c-8d27d9d48ede"
 env = {}
 
 # Participant - SQL generating agent
 [[participants]]
-# Use your GHCR AgentX purple agent image
-image = "ghcr.io/ashcastelinocs124/agentx-purple:latest"
+agentbeats_id = "019bc3fe-9310-7251-9929-e2568f2145db"
 name = "sql_agent"
 env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}" }
 
@@ -21,5 +20,3 @@ task_count = 5
 scorer_preset = "default"
 dialect = "sqlite"
 same_tasks = true
-# Retry: 200845
-# Retry: 200802
