--- a/scenario.toml
+++ b/scenario.toml
@@ -7,11 +7,17 @@
 agentbeats_id = "019bc3ec-653b-7d90-aa8c-8d27d9d48ede"
 env = {}
 
-# Participant - SQL generating agent
+# Participant - SQL generating agent (Gemini)
 [[participants]]
 agentbeats_id = "019bc3fe-9310-7251-9929-e2568f2145db"
 name = "sql_agent"
 env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}" }
+
+# Participant - SQL generating agent (OpenAI)
+[[participants]]
+agentbeats_id = "019bc521-3772-7c11-b4f7-1eadc2555d97"
+name = "sql_agent_openai"
+env = { OPENAI_API_KEY = "${OPENAI_API_KEY}" }
 
 # Assessment Configuration
 [config]
@@ -20,4 +26,4 @@ task_count = 5
 scorer_preset = "default"
 dialect = "sqlite"
 same_tasks = true
-# Re-trigger: Thu Jan 15 21:02:00 CST 2026
+# Re-trigger: Thu Jan 15 22:48:00 CST 2026
